--- a/index.html
+++ b/index.html
@@ -81,14 +81,82 @@
         <button class="thirdcontainerbtn2">Demo Drive</button>
       </div>
 
-      <br>
-      <br>
+      <br />
+      <br />
       <div class="thirdcontainer3">
         <p>
           *Price before incentives and savings is $79,990, excluding taxes and
           fees. Subject to change.
         </p>
         <a href="#">Learn about est. gas savings.</a>
+      </div>
+    </div>
+
+    <div class="fourthcontainer">
+      <div class="fourthcontainer1">
+        <br />
+        <br />
+
+        <h2>Model S</h2>
+        <h5>From $71,090*</h5>
+        <p>After Est. Gas Savings</p>
+      </div>
+      <img src="./img/03.png" alt="" />
+      <div class="fourthcontainer2">
+        <button class="fourthcontainerbtn1">Custom Order</button>
+        <button class="fourthcontainerbtn2">Demo Drive</button>
+      </div>
+
+      <br />
+      <br />
+      <div class="fourthcontainer3">
+        <p>
+          *Price before savings is $74,990, excluding taxes and fees. Subject to
+          change.
+        </p>
+        <a href="#">Learn about est. gas savings.</a>
+      </div>
+    </div>
+
+    <div class="fifthcontainer">
+      <img src="./img/04.png" alt="" />
+      <div class="fifthcontainerone">
+        <button class="fifthcontainerbtn1">Custom Order</button>
+        <button class="fifthcontainerbtn2">Demo Drive</button>
+      </div>
+    </div>
+
+    <div class="sixthcontainer">
+      <video autoplay muted loop src="./video/002.webm"></video>
+      <div class="sixthcontainerone">
+        <h2>Experience Tesla</h2>
+        <p>Schedule a Demo Drive Today</p>
+      </div>
+      <button>Demo Drive</button>
+    </div>
+
+    <div class="seventhcontainer">
+      <img src="./img/05.png" alt="" />
+      <div class="seventhcontainer1">
+        <h2>Solar Panels</h2>
+        <br />
+        <a href="#">Schedule a Virtual Consultation</a>
+      </div>
+      <div class="seventhcontainer2">
+        <button class="seventhcontainer2btn1">Order Now</button>
+        <button class="seventhcontainer2btn2">Learn More</button>
+      </div>
+    </div>
+
+    <div class="eightcontainer">
+      <img src="./img/06.png" alt="" />
+      <div class="eightcontainer1">
+        <h2>Solar Roof</h2>
+        <p>Produce Clean Energy From Your Roof</p>
+      </div>
+      <div class="eightcontainer2">
+        <button class="eightcontainer2btn1">Order Now</button>
+        <button class="eightcontainer2btn2">Learn More</button>
       </div>
     </div>
   </body>
