--- a/index.html
+++ b/index.html
@@ -159,5 +159,26 @@
         <button class="eightcontainer2btn2">Learn More</button>
       </div>
     </div>
+
+    <div class="ninthcontainer">
+      <img src="./img/07.png" alt="" />
+      <div class="ninthcontainer1">
+        <h2>Powerwall</h2>
+      </div>
+      <div class="ninthcontainer2">
+        <button class="ninthcontainer2btn1">Order Now</button>
+        <button class="ninthcontainer2btn2">Learn More</button>
+      </div>
+    </div>
+
+    <div class="tenthcontainer">
+        <img src="./img/08.png" alt="">
+        <div class="tenthcontainer1">
+            <h2>Accessories</h2>
+        </div>
+        <div class="tenthcontainer2">
+            <button class="tenthcontainer2btn">Order Now</button>
+        </div>
+    </div>
   </body>
 </html>
