--- a/index.html
+++ b/index.html
@@ -172,13 +172,25 @@
     </div>
 
     <div class="tenthcontainer">
-        <img src="./img/08.png" alt="">
-        <div class="tenthcontainer1">
-            <h2>Accessories</h2>
-        </div>
-        <div class="tenthcontainer2">
-            <button class="tenthcontainer2btn">Order Now</button>
-        </div>
+      <img src="./img/08.png" alt="" />
+      <div class="tenthcontainer1">
+        <h2>Accessories</h2>
+      </div>
+      <div class="tenthcontainer2">
+        <button class="tenthcontainer2btn">Order Now</button>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="footerone">
+        <a href="#">Tesla © 2024</a>
+        <a href="#">Privacy & Legal</a>
+        <a href="#">Vehicle Recalls</a>
+        <a href="#">Contact</a>
+        <a href="#">News</a>
+        <a href="#">Get Updates</a>
+        <a href="#">Locations</a>
+      </div>
     </div>
   </body>
 </html>
